--- a/index.html
+++ b/index.html
@@ -1661,6 +1661,12 @@ border-radius: 0px;
 </div>
 <div id="rnaseq" class="section level4">
 <h4>RNASeq</h4>
+<p>for the <strong>OLD CCLE RNASeq data</strong>, the data is
+transformed as follows: based on <a href="https://www.orcestra.ca/pset/10.5281/zenodo.3905461">the orcestra
+page for CCLE</a> -
+<code>Gene TPM Values: After estimation by the tool detailed above, gene TPM values are transformed by log2(x + 0.001).</code>
+-
+<code>Gene Count Values:   After estimation by the tool detailed above, gene count values are transformed by log2(x + 1).</code></p>
 <pre><code>## --------------------------------------------------------------------------------
 ## Old Molecular Profiles with Annotation:  rnaseq
 ## --------------------------------------------------------------------------------
@@ -2031,6 +2037,12 @@ border-radius: 0px;
 </div>
 <div id="rnaseq-1" class="section level4">
 <h4>RNASeq</h4>
+<p>for the <strong>OLD GDSC RNASeq data</strong>, the data is
+transformed as follows: based on <a href="https://www.orcestra.ca/pset/10.5281/zenodo.5787145">the orcestra
+page for GDSC</a> -
+<code>Gene TPM Values: After estimation by the tool detailed above, gene TPM values are transformed by log2(x + 0.001).</code>
+-
+<code>Gene Count Values:   After estimation by the tool detailed above, gene count values are transformed by log2(x + 1).</code></p>
 <pre><code>## --------------------------------------------------------------------------------
 ## Old Molecular Profiles with Annotation:  rnaseq
 ## --------------------------------------------------------------------------------
@@ -2418,6 +2430,12 @@ border-radius: 0px;
 </div>
 <div id="rnaseq-2" class="section level4">
 <h4>RNASeq</h4>
+<p>for the <strong>OLD gCSI RNASeq data</strong>, the data is
+transformed as follows: based on <a href="https://www.orcestra.ca/pset/10.5281/zenodo.7829857">the orcestra
+page for gCSI</a> -
+<code>Gene TPM Values: After estimation by the tool detailed above, gene TPM values are transformed by log2(x + 0.001).</code>
+-
+<code>Gene Count Values:   After estimation by the tool detailed above, gene count values are transformed by log2(x + 1).</code></p>
 <pre><code>## --------------------------------------------------------------------------------
 ## Old Molecular Profiles with Annotation:  rnaseq
 ## --------------------------------------------------------------------------------
